--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,14 @@
 
 <body class="page__body">
   <div class="site-container">
-    @include('partials/header.html')
+    @include('partials/header2.html')
     <main class="main">
-      <picture>
-        <source srcset="img/cover.avif" type="image/avif">
-        <source srcset="img/cover.webp" type="image/webp">
-        <img loading="lazy" src="img/cover.jpg" class="image" width="300" height="300" alt="Обложка канала MaxGraph">
-      </picture>
+
     </main>
 
     @include('partials/footer.html')
-    <!-- @include('html/h1.html') пример include -->
   </div>
+  <!-- @include('partials/header.html') -->
 </body>
 
 </html>
